kubernetes/scoremsg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openrmf-msg-score
  namespace: openrmf
spec:
  selector:
    matchLabels:
      run: openrmf-msg-score
  replicas: 2
  template:
    metadata:
      labels:
        run: openrmf-msg-score
    spec:
      containers:
      - name: openrmf-msg-score
        image: cingulara/openrmf-msg-score:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "1Gi"
            cpu: "750m"
          requests:
            memory: "500M"
            cpu: "250m"
