kubernetes/controls.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openrmf-controls
  namespace: openrmf
spec:
  selector:
    matchLabels:
      run: openrmf-controls
  replicas: 2
  template:
    metadata:
      labels:
        run: openrmf-controls
    spec:
      containers:
      - name: openrmf-controls
        image: cingulara/openrmf-api-controls:latest
        ports:
        - containerPort: 8094
        resources:
          limits:
            memory: "1Gi"
          requests:
            memory: "500M"
---
apiVersion: v1
kind: Service
metadata:
  name: openrmf-controls
  namespace: openrmf
spec:
  ports:
  - name: http
    port: 8094
    protocol: TCP
    targetPort: 8094
  selector:
    run: openrmf-controls
  sessionAffinity: None
  type: LoadBalancer
