kubernetes/controlsservice.yaml

apiVersion: v1
kind: Service
metadata:
  name: openrmf-controls
  namespace: openrmf
spec:
  ports:
  - name: http
    port: 8094
    protocol: TCP
    targetPort: 8094
  selector:
    run: openrmf-controls
  sessionAffinity: None
  type: NodePort
