kubernetes/nats.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openrmf-nats
  namespace: openrmf
  labels:
    app: openrmf
    component: nats
spec:
  selector:
    matchLabels:
      run: openrmf-nats
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        run: openrmf-nats
    spec:
      containers:
      - name: openrmf-nats
        image: nats:1.4.1-linux
        ports:
        - containerPort: 4222
          protocol: TCP
        resources:
          limits:
            memory: "250Mi"
            cpu: "250m"
          requests:
            memory: "125Mi"
            cpu: "125m"
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: natsserver
  namespace: openrmf
spec:
  ports:
  - name: nats
    port: 4222
    protocol: TCP
    targetPort: 4222
  selector:
    run: openrmf-nats
  sessionAffinity: None
  clusterIP: None
