kubernetes/template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openrmf-template
  namespace: openrmf
  labels:
    app: openrmf
    component: api-template
spec:
  selector:
    matchLabels:
      run: openrmf-template
  replicas: 1
  template:
    metadata:
      labels:
        run: openrmf-template
    spec:
      containers:
      - name: openrmf-template
        image: cingulara/openrmf-api-template:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "750Mi"
            cpu: "500m"
          requests:
            memory: "250Mi"
            cpu: "125m"
---
apiVersion: v1
kind: Service
metadata:
  name: openrmf-template
  namespace: openrmf
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: openrmf-template
  sessionAffinity: None
  type: NodePort
