kubernetes/templatedb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openrmf-templatedb
  namespace: openrmf
spec:
  selector:
    matchLabels:
      run: openrmf-templatedb
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        run: openrmf-templatedb
    spec:
      containers:
      - name: openrmf-templatedb
        image: cingulara/openrmf-templatedb:latest
        ports:
        - containerPort: 27017
        resources:
          requests:
            memory: "500M"
            cpu: "500m"
        volumeMounts:
        - mountPath: /data/db
          name: mongodata-templatedb
      restartPolicy: Always
      volumes:
      - name: mongodata-templatedb
        persistentVolumeClaim:
          claimName: mongodata-templatedb
---
apiVersion: v1
kind: Service
metadata:
  name: openrmf-templatedb
  namespace: openrmf
spec:
  ports:
  - name: mongodb-templatedb
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    run: openrmf-templatedb
  sessionAffinity: None
  clusterIP: None
