kubernetes/upload.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openrmf-upload
  namespace: openrmf
  labels:
    app: openrmf
    component: api-upload
spec:
  selector:
    matchLabels:
      run: openrmf-upload
  replicas: 2
  template:
    metadata:
      labels:
        run: openrmf-upload
    spec:
      containers:
      - name: openrmf-upload
        image: cingulara/openrmf-api-upload:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "1Gi"
            cpu: "750m"
          requests:
            memory: "500M"
            cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: openrmf-upload
  namespace: openrmf
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: openrmf-upload
  sessionAffinity: None
  type: NodePort
