kubernetes/complianceingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: openrmf-compliance-ingress
  namespace: openrmf
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: compliance.openrmf
    http:
      paths:
      - path: /*
        backend:
          serviceName: openrmf-compliance
          servicePort: 8080
