kubernetes/controlsingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: openrmf-controls-ingress
  namespace: openrmf
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: controls.openrmf
    http:
      paths:
      - path: /*
        backend:
          serviceName: openrmf-controls
          servicePort: 8094
