kubernetes/readingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: openrmf-read-ingress
  namespace: openrmf
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: read.openrmf
    http:
      paths:
      - path: /
        backend:
          serviceName: openrmf-read
          servicePort: 8080
