kubernetes/uploadingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: openrmf-upload-ingress
  namespace: openrmf
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/cors-allow-methods: "POST, PUT, OPTIONS"
spec:
  rules:
  - host: openrmf.local
    http:
      paths:
      - path: /upload(/|$)(.*)
        backend:
          serviceName: openrmf-upload
          servicePort: 8080
